# issx

./: .cruft.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/actions/python-poetry-env/: action.yml
.github/workflows/: cookiecutter.yml  draft_release.yml  test.yml
api_docs/: index.html
backends/: index.html
changelog/: index.html
cli_usage/: index.html
docs/: api_docs.md  backends.md  cli_usage.md
search/: search_index.json
src/issx/: cli.py  cli_utils.py  instance_managers.py  services.py
src/issx/clients/: __init__.py  exceptions.py  gitlab.py  interfaces.py  redmine.py
src/issx/domain/: __init__.py  config.py  issues.py
src/issx/instance_managers/: config_parser.py  managers.py
tests/: memory_clients.py  test_cli_tools.py  test_clients.py  test_config.py  test_instance_managers.py  test_services.py
